fix: conflict with the dto of the product management
