# api/swagger-spec.json
@@ -183,7 +183,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AddProductDto"
+                "$ref": "#/components/schemas/AddCartProductDto"
               }
             }
           }
@@ -247,7 +247,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UpdateProductDto"
+                "$ref": "#/components/schemas/UpdateCartProductDto"
               }
             }
           }
@@ -1570,7 +1570,7 @@
           }
         }
       },
-      "AddProductDto": {
+      "AddCartProductDto": {
         "type": "object",
         "properties": {
           "product": {
@@ -1589,29 +1589,14 @@
           "product"
         ]
       },
-      "UpdateProductDto": {
+      "UpdateCartProductDto": {
         "type": "object",
         "properties": {
-          "name": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string"
-          },
-          "price": {
-            "type": "number"
-          },
-          "available": {
-            "type": "boolean"
-          },
-          "coverImageUrl": {
-            "type": "string"
-          },
-          "imagesUrls": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
+          "count": {
+            "type": "number",
+            "description": "The number of product in the cart",
+            "minimum": 1,
+            "maximum": 10
           }
         }
       },
@@ -1982,6 +1967,32 @@
           "imagesUrls",
           "category"
         ]
+      },
+      "UpdateProductDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number"
+          },
+          "available": {
+            "type": "boolean"
+          },
+          "coverImageUrl": {
+            "type": "string"
+          },
+          "imagesUrls": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        }
       },
       "DeleteProductDto": {
         "type": "object",
